# fine-tuning-LHDN-eInvoice-QA

./: .gitignore  README.md  zaaa.txt
services/cookies/: .env.example  pyproject.toml
services/cookies/src/: main.py  test_connection.py  tune.ipynb
