[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["carrickcheah <carrick113@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.55.1"
pandas = "^2.2.3"
pydantic-settings = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
